fixing nav-links showing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -175,6 +175,7 @@ nav{
         transition: all 0.5s ease-out;
         pointer-events: none;
         overflow: hidden;
+        visibility: hidden;
     }
 
     .nav_links.close-fast{
@@ -182,10 +183,11 @@ nav{
     }
 
     .nav_links.open{
+        visibility: revert;
         clip-path: circle(1500px at 90% -15%);
         -webkit-clip-path: circle(1500px at 90% -15%);
         pointer-events: all;
-        
+
     }
 
     .logo{
